[package]
name = "pure_lang_compiler4pure_lang_ir"
version = "0.1.0"
edition = "2024"

[dependencies]
comp_shared = { package = "pure_lang_compiler_shared", path = "D:/pure_lang/compiler/compiler_shared" }
comp_base = { package = "pure_lang_compiler_base", path = "D:/pure_lang/compiler/compiler_base" }
fancy-regex = "0.15.0"
thiserror = "2.0.12"
derive_more = { version = "2.0.1", features = ["full"] }
peg = { version = "0.8.5", path = "../rust-peg" }
const_format = "0.2.34"
paste = "1.0.15"
line-ending = "1.5.1"
enumflags2 = { version = "0.7.12", features = ["std"] }
binary = { path = "D:/pure_lang/binary", package = "pure_lang_binary" }

[build-dependencies]

[features]
default = [
   # "trace_parser",
]
trace_parser = ["peg/trace"]

[lib]
name = "Compiler_PurelangIR"
crate-type = ["dylib"]